# french-museum-recommender

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.sh
notebooks/: notebook.ipynb  notebook_comparison.ipynb  notebook_graph.ipynb  notebook_hybrid.ipynb
