[project]
name = "museum-recommendation-engine"
version = "1.0.0"
description = "A content-based recommendation system for French museums using CamemBERT embeddings"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Loïc Guillois" }
]
requires-python = ">=3.9"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "sentence-transformers>=3.0.0",
    "umap-learn>=0.5.0",
    "missingno>=0.5.0",
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
    "wikipedia2vec>=1.0.0",
    "node2vec>=0.4.0",
    "networkx>=3.0",
]

[dependency-groups]
dev = [
    "black",
    "flake8",
]
